src/objects/KB_Global_Search_Scope__c.object
<CustomObject>
    <fields>
        <fullName>Apex_BatchId__c</fullName>
        <label>Apex Batch Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ArticleId__c</fullName>
        <label>Article Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ArticleNumber__c</fullName>
        <label>Article Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KnowledgeArticleId__c</fullName>
        <label>Knowledge Article Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>KB Global Search Scope</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ArticleNumber__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>KB Global Search Scope Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KB Global Search Scope</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>